--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <main id="calc">
     <div id="container">
-        <div id="display">0</div>
+        <div id="display"></div>
         <button type="button" class="clear" value="clear" data-key="8">AC</button>
         <button type="button" class="sign" value="sign" data-key="192">+/-</button>
         <button type="button" class="percent" value="percent" data-key="80">%</button>
